# Research_council

./: .env.example  .gitignore  README.md  config.py  package-lock.json  pyproject.toml  report.md  smoke_test.py
api/: __init__.py  langfuse_client.py  main.py  models.py
api/routes/: __init__.py  graph.py  ingest.py  papers.py  pubmed.py  query.py  search.py  upload.py
council/: __init__.py  agents.py  chairman.py  deliberation.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CouncilView.jsx  EvidenceTrail.jsx  GraphViewer.jsx  IngestedPapers.jsx  PubMedSearch.jsx  QueryInput.jsx  UnifiedSearch.jsx
graph/: __init__.py  community_detector.py  kg_builder.py  retriever.py  schema.py  writeback.py
ingestion/: __init__.py  arxiv_fetcher.py  chunker.py  embedding_pipeline.py  papers_with_code.py  pdf_parser.py  pubmed_fetcher.py  semantic_scholar.py
orchestrator/: __init__.py  bigtool_agent.py  flow.py  state.py
tools/: __init__.py  evidence_tools.py  graph_tools.py  paper_tools.py  registry.py
